--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pompiere&display=swap');
+
+/* Importing Google Font 'MonteCarlo' */
+@import url('https://fonts.googleapis.com/css2?family=MonteCarlo&display=swap');
 
 @tailwind base;
 @tailwind components;
